--- a/Resources/Prototypes/Entities/Mobs/mechs.yml
+++ b/Resources/Prototypes/Entities/Mobs/mechs.yml
@@ -228,6 +228,7 @@
     - AllAccess
   - type: StaticPrice
     price: 10000
+  - type: ShowSecurityIcons
 
 - type: entity
   id: MechMaulerDestroyed
@@ -724,6 +725,8 @@
     rules: ghost-role-information-MechOdysseus-rules
   - type: PointLight
     color: cyan
+  - type: Body
+    prototype: odySilicon
   - type: InnateTool
     tools:
       - id: HyposprayPromisliniy9000
@@ -731,6 +734,7 @@
       - id: HandheldCrewMonitor
       - id: ClothingBackpackSatchelMedical
       - id: HandheldHealthAnalyzer
+      - id: DefibrillatorOneHandedUnpowered
   - type: Strap
     position: Stand
     buckleOffset: "0,0.15"
@@ -779,6 +783,37 @@
           MechOdysseusDestroyed:
             min: 1
             max: 1
+- type: body
+  id: odySilicon
+  name: "mecha"
+  root: hand 1
+  slots:
+    hand 1:
+      part: LeftArmBorg
+      connections:
+      - hand 2
+    hand 2:
+      part: LeftArmBorg
+      connections:
+      - hand 3
+    hand 3:
+      part: LeftArmBorg
+      connections:
+      - hand 4
+    hand 4:
+      part: RightArmBorg
+      connections:
+      - hand 5
+    hand 5:
+      part: RightArmBorg
+      connections:
+      - hand 6
+    hand 6:
+      part: LeftArmBorg
+      connections:
+      - hand 7
+    hand 7:
+      part: LeftArmBorg
 
 - type: entity
   id: MechOdysseusDestroyed
