--- a/Resources/Prototypes/Entities/Mobs/mechs.yml
+++ b/Resources/Prototypes/Entities/Mobs/mechs.yml
@@ -55,6 +55,7 @@
     name: ghost-role-information-MechMaulerReal-name
     description: ghost-role-information-MechMaulerReal-description
     rules: ghost-role-information-MechMaulerReal-rules
+    whitelistRequired: true
 
 - type: body
   id: MechaSilicon
@@ -315,6 +316,7 @@
     name: ghost-role-information-MechMarauder-name
     description: ghost-role-information-MechMarauder-description
     rules: ghost-role-information-MechMarauder-rules
+    whitelistRequired: true
   - type: ActiveRadio
     channels:
     - CentCom
@@ -370,6 +372,7 @@
     name: ghost-role-information-MechDarkGygax-name
     description: ghost-role-information-MechDarkGygax-description
     rules: ghost-role-information-MechDarkGygax-rules
+    whitelistRequired: true
   - type: InnateTool
     tools:
       - id: WeaponLightMachineGunL69000
@@ -413,7 +416,7 @@
   parent: MechMaulerDestroyed
   name: Broken Syndicate Armored Battle Mechanoid "Gaigex"
   description: It won't help anymore in the right moment, you can assemble a table from it, it will be grateful.
-  components: 
+  components:
   - type: Sprite
     sprite: Objects/Specific/Mech/mecha.rsi
     state: darkgygax-broken
@@ -453,6 +456,7 @@
     name: ghost-role-information-MechSeraph-name
     description: ghost-role-information-MechSeraph-description
     rules: ghost-role-information-MechSeraph-rules
+    whitelistRequired: true
   - type: MobState
     allowedStates:
     - Alive
@@ -549,6 +553,7 @@
     name: ghost-role-information-MechDurand-name
     description: ghost-role-information-MechDurand-description
     rules: ghost-role-information-MechDurand-rules
+    whitelistRequired: true
   - type: ActiveRadio
     channels:
     - Common
@@ -618,6 +623,7 @@
     name: ghost-role-information-MechGygax-name
     description: ghost-role-information-MechGygax-description
     rules: ghost-role-information-MechGygax-rules
+    whitelistRequired: true
   - type: ActiveRadio
     channels:
     - CentCom
@@ -645,7 +651,7 @@
 #----------------------------------------------------------------------------
 
 - type: entity
-  name: SABMS "H.O.N.K." 
+  name: SABMS "H.O.N.K."
   description: Praise the greatness of the mighty Honkmother with this mech! HONK!
   id: MechDarkHonker
   parent: MechMauler
@@ -658,6 +664,7 @@
     name: ghost-role-information-MechDarkHonker-name
     description: ghost-role-information-MechDarkHonker-description
     rules: ghost-role-information-MechDarkHonker-rules
+    whitelistRequired: true
   - type: InnateTool
     tools:
       - id: WeaponBikeHorn9000
@@ -705,7 +712,7 @@
   - type: Sprite
     sprite: Objects/Specific/Mech/mecha.rsi
     state: darkhonker-broken
-    netsync: false    
+    netsync: false
 
 #----------------------------------------------------------------------------
 
@@ -723,6 +730,7 @@
     name: ghost-role-information-MechOdysseus-name
     description: ghost-role-information-MechOdysseus-description
     rules: ghost-role-information-MechOdysseus-rules
+    whitelistRequired: true
   - type: PointLight
     color: cyan
   - type: Body
@@ -855,6 +863,7 @@
     name: ghost-role-information-MechHauler-name
     description: ghost-role-information-MechHauler-description
     rules: ghost-role-information-MechHauler-rules
+    whitelistRequired: true
   - type: PointLight
     enabled: false
     radius: 10
@@ -868,7 +877,7 @@
       - id: trayScanner
       - id: JawsOfLifeHarm9000
       - id: Omnitool
-      - id: WelderExperimental  
+      - id: WelderExperimental
       - id: HandheldStationMap
   - type: ActiveRadio
     channels:
@@ -940,6 +949,7 @@
     name: ghost-role-information-MechClarke-name
     description: ghost-role-information-MechClarke-description
     rules: ghost-role-information-MechClarke-rules
+    whitelistRequired: true
   - type: Body
     prototype: ClarkeSilicon
   - type: InnateTool
