--- a/Resources/Prototypes/Roles/Jobs/Engineering/atmospheric_technician.yml
+++ b/Resources/Prototypes/Roles/Jobs/Engineering/atmospheric_technician.yml
@@ -12,6 +12,7 @@
   supervisors: job-supervisors-ce
   canBeAntag: false
   antagAdvantage: 10
+  whitelistRequired: true
   access:
   - Maintenance
   - Engineering
