--- a/Resources/Prototypes/Roles/Jobs/Cargo/quartermaster.yml
+++ b/Resources/Prototypes/Roles/Jobs/Cargo/quartermaster.yml
@@ -9,10 +9,12 @@
       time: 21600 #6 hrs
     - !type:RoleTimeRequirement
       role: JobSalvageSpecialist
-      time: 18000
+      time: 10800 #3 hrs
     - !type:DepartmentTimeRequirement
-      department: Cargo
-      time: 72000
+      time: 36000 #10 hours
+    - !type:OverallPlaytimeRequirement
+      time: 144000 #40 hrs
+
   weight: 10
   startingGear: QuartermasterGear
   icon: "JobIconQuarterMaster"
