--- a/Resources/Prototypes/Roles/Jobs/Cargo/quartermaster.yml
+++ b/Resources/Prototypes/Roles/Jobs/Cargo/quartermaster.yml
@@ -11,6 +11,7 @@
       role: JobSalvageSpecialist
       time: 10800 #3 hrs
     - !type:DepartmentTimeRequirement
+      department: Cargo
       time: 36000 #10 hours
     - !type:OverallPlaytimeRequirement
       time: 144000 #40 hrs
