Fix attribution for now playing window

--- a/Resources/Audio/Lobby/attributions.yml
+++ b/Resources/Audio/Lobby/attributions.yml
@@ -80,5 +80,5 @@
 
 - files: ["родина.ogg"]
   license: "CC-BY-3.0"
-  copyright: "Родина от Проект Лазарь"
+  copyright: "Родина by Проект Лазарь"
   source: "https://www.youtube.com/watch?v=XnY7Q-ULqpA"
