Change moff to moth & it's migration

--- a/Resources/Prototypes/Catalog/Fills/Crates/fun.yml
+++ b/Resources/Prototypes/Catalog/Fills/Crates/fun.yml
@@ -13,7 +13,7 @@
       - id: PlushieLizard
       - id: PlushieSpaceLizard
       - id: PlushieVox
-      - id: PlushieMoff
+      - id: PlushieMoth
       - id: PlushieRouny
       - id: PlushieRatvar
       - id: PlushieSharkBlue
