--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/toy.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/toy.yml
@@ -23,7 +23,7 @@
         - PlushieSlime
         - PlushieSnake
         - PlushieVox
-        - PlushieMoff
+        - PlushieMoth
         - PlushieRatvar
         - PlushieSpaceLizard
         - PlushieRouny
