--- a/Resources/Prototypes/Entities/Objects/Decoration/present.yml
+++ b/Resources/Prototypes/Entities/Objects/Decoration/present.yml
@@ -76,7 +76,7 @@
         orGroup: GiftPool
       - id: PlushieVox
         orGroup: GiftPool
-      - id: PlushieMoff
+      - id: PlushieMoth
         orGroup: GiftPool
       - id: PlushieRatvar
         orGroup: GiftPool
