--- a/Resources/Prototypes/Entities/Objects/Fun/toys.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/toys.yml
@@ -439,7 +439,7 @@
 
 - type: entity
   parent: BasePlushie
-  id: PlushieMoff
+  id: PlushieMoth
   name: moth plushie
   description: A plushie depicting an adorable mothperson. It's a huggable bug!
   components:
