--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -87,3 +87,6 @@ GeneratorPlasma: PortableGeneratorPacman
 GeneratorUranium: PortableGeneratorSuperPacman
 GeneratorPlasmaMachineCircuitboard: PortableGeneratorPacmanMachineCircuitboard
 GeneratorUraniumMachineCircuitboard: PortableGeneratorSuperPacmanMachineCircuitboard
+
+# 07-09-2023 Starshine
+PlushieMoff: PlushieMoth
