--- a/Resources/Prototypes/Entities/Objects/Fun/toys.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/toys.yml
@@ -444,7 +444,7 @@
   description: A plushie depicting an adorable mothperson. It's a huggable bug!
   components:
   - type: Sprite
-    state: plushie_moff
+    state: plushie_moth
   - type: EmitSoundOnUse
     sound:
       path: /Audio/Voice/Moth/moth_scream.ogg
