Partial syndicate doors removal for upstream

--- a/Resources/Prototypes/Entities/Objects/Devices/Electronics/door.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Electronics/door.yml
@@ -324,7 +324,7 @@
   suffix: Syndicate
   components:
   - type: AccessStorage
-    access: [["Syndicate"]]
+    access: [["SyndicateAgent"]]
 
 - type: entity
   id: DoorElectronicsSyndicateCommand
