--- a/Resources/Prototypes/Access/syndicate.yml
+++ b/Resources/Prototypes/Access/syndicate.yml
@@ -1,6 +1,7 @@
 ﻿- type: accessLevel
   id: NuclearOperative
   name: id-card-access-level-nuclear-operative
+
 - type: accessLevel
-  id: Syndicate
-  name: id-card-access-level-Syndicate
+  id: SyndicateAgent
+  name: id-card-access-level-syndicate-agent
