Trying to fix problems + Get synd command doors back

--- a/Resources/Prototypes/Entities/Objects/Devices/Electronics/door.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Electronics/door.yml
@@ -327,9 +327,17 @@
     access: [["SyndicateAgent"]]
 
 - type: entity
-  id: DoorElectronicsSyndicateCommand
+  id: DoorElectronicsNukeop
   parent: DoorElectronics
-  suffix: SyndicateCommand
+  suffix: NuclearOperative
+  components:
+  - type: AccessStorage
+    access: [["NuclearOperative"]]
+
+- type: entity
+  id: DoorElectronicsNukeopCommand
+  parent: DoorElectronics
+  suffix: NukeopCommand
   components:
   - type: AccessStorage
     access: [["NuclearOperative"]]
