--- a/Resources/Prototypes/Entities/Clothing/Shoes/modsuitshoes.yml
+++ b/Resources/Prototypes/Entities/Clothing/Shoes/modsuitshoes.yml
@@ -1,3 +1,4 @@
+# TODO: Отсортировать эти прототипы
 - type: entity
   parent: ClothingShoesBootsMag
   id: ClothingModsuitShoesCorp
@@ -13,13 +14,7 @@
     equipSound: /Audio/Items/ballin.ogg
     unequipSound: /Audio/Items/ballout.ogg
   - type: Magboots
-    toggleAction:
-      icon: { sprite: Clothing/Shoes/Boots/Modsuit/corp.rsi, state: icon }
-      iconOn: Clothing/Shoes/Boots/Modsuit/corp.rsi/icon-on.png
-      name: action-name-magboot-toggle
-      description: action-decription-magboot-toggle
-      itemIconStyle: NoItem
-      event: !type:ToggleActionEvent
+    toggleAction: ActionToggleMagboots
   - type: ClothingSpeedModifier
     walkModifier: 1
     sprintModifier: 1
@@ -43,13 +38,7 @@
     equipSound: /Audio/Items/ballin.ogg
     unequipSound: /Audio/Items/ballout.ogg
   - type: Magboots
-    toggleAction:
-      icon: { sprite: Clothing/Shoes/Boots/Modsuit/admem.rsi, state: icon }
-      iconOn: Clothing/Shoes/Boots/Modsuit/admem.rsi/icon-on.png
-      name: action-name-magboot-toggle
-      description: action-decription-magboot-toggle
-      itemIconStyle: NoItem
-      event: !type:ToggleActionEvent
+    toggleAction: ActionToggleMagboots
   - type: ClothingSpeedModifier
     walkModifier: 1
     sprintModifier: 1
@@ -73,13 +62,7 @@
   - type: Clothing
     sprite: Clothing/Shoes/Boots/Modsuit/chrono.rsi
   - type: Magboots
-    toggleAction:
-      icon: { sprite: Clothing/Shoes/Boots/Modsuit/chrono.rsi, state: icon }
-      iconOn: Clothing/Shoes/Boots/Modsuit/chrono.rsi/icon-on.png
-      name: action-name-magboot-toggle
-      description: action-decription-magboot-toggle
-      itemIconStyle: NoItem
-      event: !type:ToggleActionEvent
+    toggleAction: ActionToggleMagboots
   - type: ClothingSpeedModifier
     walkModifier: 1
     sprintModifier: 1
