--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -90,3 +90,9 @@ GeneratorUraniumMachineCircuitboard: PortableGeneratorSuperPacmanMachineCircuitb
 
 # 07-09-2023 Starshine
 PlushieMoff: PlushieMoth
+
+# 16-09-2023 Starshine
+AirlockSyndicateCommand: AirlockSyndicateNukeopCommand
+AirlockSyndicateCommandLocked: AirlockSyndicateNukeopCommandLocked
+AirlockSyndicateCommandGlass: AirlockSyndicateNukeopCommandGlass
+AirlockSyndicateCommandGlassLocked: AirlockSyndicateNukeopCommandGlassLocked
