--- a/Resources/Prototypes/Entities/Structures/Doors/Airlocks/airlocks.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/Airlocks/airlocks.yml
@@ -105,6 +105,8 @@
   components:
   - type: Sprite
     sprite: Structures/Doors/Airlocks/Standard/syndicate.rsi
+  - type: WiresPanel
+    securityLevel: Level2
   - type: Construction
     node: airlockMedSecurity
 
@@ -115,6 +117,8 @@
   components:
   - type: Sprite
     sprite: Structures/Doors/Airlocks/Standard/syndicatecommand.rsi
+  - type: WiresPanel
+    securityLevel: Level5
   - type: Construction
     node: airlockMaxSecurity
 
