--- a/Resources/Prototypes/Entities/Structures/Doors/Airlocks/airlocks.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/Airlocks/airlocks.yml
@@ -275,6 +275,8 @@
     sprite: Structures/Doors/Airlocks/Glass/syndicate.rsi
   - type: PaintableAirlock
     group: Glass
+  - type: WiresPanel
+    securityLevel: Level2
   - type: Construction
     node: glassAirlockMedSecurity
 
@@ -286,6 +288,8 @@
   - type: Sprite
     sprite: Structures/Doors/Airlocks/Glass/syndicatecommand.rsi
   - type: PaintableAirlock
+  - type: WiresPanel
+    securityLevel: Level5
     group: Glass
   - type: Construction
     node: glassAirlockMaxSecurity
