--- a/Resources/Prototypes/Entities/Mobs/Species/felinid.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/felinid.yml
@@ -1,7 +1,7 @@
 # Anything human specific (e.g. UI, input) goes under MobHuman
 - type: entity
   name: Urist McCat
-  parent: BaseMobOrganic
+  parent: BaseMobSpeciesOrganic
   id: BaseMobFelinid
   abstract: true
   components:
@@ -34,7 +34,7 @@
 - type: entity
   name: Urist McHands
   id: MobFelinidDummy
-  parent: BaseMobOrganicDummy
+  parent: BaseSpeciesDummy
   noSpawn: true
   components:
   - type: HumanoidAppearance
